cdk/mwaa-redshift/cdk.out/MWAA-Redshift-VPC.template.json
{
  "Resources": {
    "MWAARedShiftClusterVPC89CB7FA5": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.192.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/Resource"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1SubnetFF8374E7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.0.0/20",
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/Subnet"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1RouteTable8D30A85C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/RouteTable"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1RouteTableAssociation4723D73B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1RouteTable8D30A85C"
        },
        "SubnetId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1SubnetFF8374E7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/RouteTableAssociation"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1DefaultRouteA20C0222": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1RouteTable8D30A85C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MWAARedShiftClusterVPCIGW9DA839BC"
        }
      },
      "DependsOn": [
        "MWAARedShiftClusterVPCVPCGWE90B9ED6"
      ],
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/DefaultRoute"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1EIPF839E29F": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/EIP"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet1NATGatewayDA519235": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "MWAARedShiftClusterVPCpublicSubnet1EIPF839E29F",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1SubnetFF8374E7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet1/NATGateway"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet2SubnetF71C9AF5": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.16.0/20",
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2/Subnet"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet2RouteTable66DDC7CC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2/RouteTable"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet2RouteTableAssociation66C4A4CD": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet2RouteTable66DDC7CC"
        },
        "SubnetId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet2SubnetF71C9AF5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2/RouteTableAssociation"
      }
    },
    "MWAARedShiftClusterVPCpublicSubnet2DefaultRoute121BE969": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet2RouteTable66DDC7CC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MWAARedShiftClusterVPCIGW9DA839BC"
        }
      },
      "DependsOn": [
        "MWAARedShiftClusterVPCVPCGWE90B9ED6"
      ],
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/publicSubnet2/DefaultRoute"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet1SubnetE53020E3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.32.0/20",
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1/Subnet"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet1RouteTableF0B7B234": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1/RouteTable"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet1RouteTableAssociation7A85A6C7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet1RouteTableF0B7B234"
        },
        "SubnetId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet1SubnetE53020E3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1/RouteTableAssociation"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet1DefaultRouteD79AE374": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet1RouteTableF0B7B234"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1NATGatewayDA519235"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet1/DefaultRoute"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet2Subnet285AA36B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.48.0/20",
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2/Subnet"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet2RouteTable3D5AE5EA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2/RouteTable"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet2RouteTableAssociationD66714AA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet2RouteTable3D5AE5EA"
        },
        "SubnetId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet2Subnet285AA36B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2/RouteTableAssociation"
      }
    },
    "MWAARedShiftClusterVPCprivateSubnet2DefaultRouteBB9F5C72": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MWAARedShiftClusterVPCprivateSubnet2RouteTable3D5AE5EA"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MWAARedShiftClusterVPCpublicSubnet1NATGatewayDA519235"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/privateSubnet2/DefaultRoute"
      }
    },
    "MWAARedShiftClusterVPCIGW9DA839BC": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/IGW"
      }
    },
    "MWAARedShiftClusterVPCVPCGWE90B9ED6": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MWAARedShiftClusterVPC89CB7FA5"
        },
        "InternetGatewayId": {
          "Ref": "MWAARedShiftClusterVPCIGW9DA839BC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/MWAA-RedShiftCluster-VPC/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02PTw+CMAzFP4v3OQVj9KghxnjRBY33UWuYwGa2TkII313mPzy9X19fmzbibRQv+HS0krUbw6WYgLHI2yNJKFiKzngLyJKrPni6e2KJ0Y6sBwret9+xaDr7XxIUIebt+Q4heBYJEz4rFRx9pvE1PFBqPOFJZiUO/uCtnTOgJCmjf+EAm50Ispe0lYS1bJiw6tHjsHinCW3P38D7kk+1pv7HvEJNXcdEQ7nRkxlf8vno5pQaW69JVcjTtz4BWG7LUykBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "MWAA-Redshift-VPC/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "MWAARedShiftClusterVPC89CB7FA5"
      },
      "Export": {
        "Name": "eu-west-1:704533066374:MWAA-Redshift-VPC:vpc-id"
      }
    },
    "ExportsOutputFnGetAttMWAARedShiftClusterVPC89CB7FA5DefaultSecurityGroupB40B8DA8": {
      "Value": {
        "Fn::GetAtt": [
          "MWAARedShiftClusterVPC89CB7FA5",
          "DefaultSecurityGroup"
        ]
      },
      "Export": {
        "Name": "MWAA-Redshift-VPC:ExportsOutputFnGetAttMWAARedShiftClusterVPC89CB7FA5DefaultSecurityGroupB40B8DA8"
      }
    },
    "ExportsOutputRefMWAARedShiftClusterVPCprivateSubnet1SubnetE53020E3AEF66202": {
      "Value": {
        "Ref": "MWAARedShiftClusterVPCprivateSubnet1SubnetE53020E3"
      },
      "Export": {
        "Name": "MWAA-Redshift-VPC:ExportsOutputRefMWAARedShiftClusterVPCprivateSubnet1SubnetE53020E3AEF66202"
      }
    },
    "ExportsOutputRefMWAARedShiftClusterVPCprivateSubnet2Subnet285AA36B7B3F54CD": {
      "Value": {
        "Ref": "MWAARedShiftClusterVPCprivateSubnet2Subnet285AA36B"
      },
      "Export": {
        "Name": "MWAA-Redshift-VPC:ExportsOutputRefMWAARedShiftClusterVPCprivateSubnet2Subnet285AA36B7B3F54CD"
      }
    }
  }
}
